--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
 		<link rel="icon" type="image/favicon" href="/projetoFrontEnd-JoaoRibeiro/public/logo.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Joao Ribeiro - FrontEnd Project</title>
+		<link href="./indexCSS.css" rel="stylesheet" />
 	</head>
+	<header>
+		<div class="navBar">
+			<div>
+				<img src="./img/logo.png" alt="Logo Inside" />
+			</div>
+			<div>
+				<nav>Navigation Bar</nav>
+			</div>
+		</div>
+	</header>
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 	</body>
+	<footer>
+		<div class="footerContainer">
+			<div class="footerCard">
+				<h3>Need help?</h3>
+			</div>
+			<div class="footerCard"><h3>contacts</h3></div>
+			<div class="footerCard"><h3>Social Media</h3></div>
+		</div>
+	</footer>
 </html>
