--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/favicon" href="../public/fav.ico" />
+		<link rel="icon" type="image/favicon" href="../fav.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Joao Ribeiro - FrontEnd Project</title>
 	</head>
